--- a/HTML_02_01_building_your_first_website/index.html
+++ b/HTML_02_01_building_your_first_website/index.html
@@ -44,7 +44,7 @@
 <body>
     <h1>Welcome to My Profile</h1>
     
-    <img src="https://placekitten.com/300/200" alt="Profile picture">
+    <img src="IMG_0230.WEBP" alt="Profile picture">
     
     <h2>About Me</h2>
     <p>Hello! I'm learning web development. This is my first webpage where I'm practicing HTML and CSS.</p>
